--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "morgan": "^1.9.0",
     "supervisor": "^0.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^5.1.1",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
